--- a/css/common.css
+++ b/css/common.css
@@ -1,8 +1,23 @@
 .stage {
     width: 80%;
     margin: 0 auto;
+	
 }
-
+#btn_map{position:absolute;
+         left:-1000px;
+		 -webkit-transition-duration:1s;
+		 transition-duration:1s;
+		 -moz-transition-duration:1s;}
+#btn_pic{position:absolute;
+         left:-700px;
+		 -webkit-transition-duration:2s;
+		 transition-duration:2s;
+		 -moz-transition-duration:2s;}
+#btn_mov{position:absolute;
+         left:-500px;
+		 -webkit-transition-duration:3s;
+		 transition-duration:3s;
+		 -moz-transition-duration:3s;}		 
 #navbar {
     background-color: transparent;
     border: none;
@@ -22,3 +37,16 @@
     margin-right: 60px;
     cursor: pointer;
 }
+
+
+			
+#sec_index{background:url(../image/index.jpg);
+           -webkit-background-size:100% 100%;
+		   background-size:100% 100%;
+		   -moz-background-size:100% 100%;}
+    
+#sec_map {background:url(../image/map2.jpg);
+         -webkit-background-size:100% 100%;
+		 background-size:100% 100%;
+		 -moz-background-size:100% 100%;}
+		 
