--- a/New/css/component.css
+++ b/New/css/component.css
@@ -62,13 +62,13 @@ html.js,
 /* Switch button */
 button.slider-switch {
 	font-size: 0;
-	width: 80px;
-	height: 80px;
+	width:50px;
+	height:50px;
 	padding: 0;
 	color: transparent;
 	position: relative;
 	border: none;
-	background: url(../img/switchmin.svg) no-repeat center center;
+	background: url(../imgs/汉堡线.png) no-repeat center center;
 	background-size: 90%;
 	float: right;
 	outline: none;
@@ -84,7 +84,7 @@ button.slider-switch {
 }
 
 button.slider-switch.view-maxi {
-	background-image: url(../img/switchmax.svg)
+	background-image: url(../imgs/汉堡线.png)
 }
 
 button.slider-switch:hover {
@@ -455,6 +455,13 @@ button.content-switch::before {
 		display: none;
 	}
 }
+.emerge{position:absolute;
+        left:90%;
+		bottom:20px;
+		z-index:1001;
+		cursor:pointer;}
+
+.emerge_later{display:none;}
 
 #visualNavi {
 	width: 50px;
@@ -517,3 +524,33 @@ button.content-switch::before {
 .visualNaviItem:hover {
 	background: #333;
 }
+
+#stage{    z-index:1000;
+           width:100%;
+		   height:100%;
+		   margin-top:17%;
+		   margin-left:17%;
+		   display:none;
+		   position:relative;
+		   
+		 }
+.main1.active{ -webkit-filter: blur(8px); /* Chrome, Opera */
+          -moz-filter: blur(8px);
+          -ms-filter: blur(8px);    
+            filter: blur(8px);}
+#stage ul {
+    list-style:none;
+    margin: auto;
+    width:100%;
+	height:100%;
+	position:relative;
+}
+#stage li {
+    float:left;
+    margin-left: 60px;
+    margin-right: 60px;
+    cursor: pointer;
+}
+
+#img_diy,#img_history,#img_map{display:none;float:left;position:relative;}		  
+
