--- a/New/css/forum.css
+++ b/New/css/forum.css
@@ -2,7 +2,7 @@ body{background:url(../imgs/%E7%BA%B9%E7%90%86.png);}
 
 .container{margin:0 auto;
            padding:30px 60px 60px 50px;
-		   
+		   width:1236px;
 		  }
 .headers{width:100%;
          height:10%;
@@ -23,72 +23,72 @@ body{background:url(../imgs/%E7%BA%B9%E7%90%86.png);}
 			border-radius:5px;
 			opacity:0.5;
 			display:none;}
-#hot{margin-top:70px;
-  border-style: solid;
-  border-width: 3px;
-  border-color: rgb(50, 50, 50);
-  background-color:rgb(253, 253, 253);
-  opacity:0.8;
-  position: relative;
-  overflow:hidden;
-  width: 100%;
-  height: 170px;
-  cursor:pointer;
-}
-.img_hot{float:right;
-         margin-top:40px;}
-		 
+
 #water{margin-top:20px;
-       border-style: solid;
-  border-width: 3px;
-  border-color: rgb(50, 50, 50);
-  background-color: rgb(253, 253, 253);
+       margin-right:20px;
+       background:url(../imgs/%E9%97%B2%E8%81%8A%E6%8A%BD%E5%87%BA.png);
   opacity:0.8;
   position: relative;
   overflow:hidden;
-  width: 20%;
+  width: 240px;
   height: 150px;
   float:left;
-  cursor:pointer;}
+  cursor:pointer;
+  }
   
   
 #img_water{float:right;
          margin-top:25px;
-		 margin-right:-70px;}
+		 margin-right:-70px;
+		}
 #img_water_hide{float:left;
                 
 				}
 #profession{margin-top:20px;
-            margin-right:-5px;
-             border-style: solid;
-  border-width: 3px;
-  border-color: rgb(50, 50, 50);
-  background-color: rgb(253, 253, 253);
+           
+  background:url(../imgs/%E4%B8%93%E4%B8%9A%E6%8A%BD%E5%87%BA.png);
   opacity:0.8;
   position: relative;
   overflow:hidden;
-  width: 70%;
-  height: 170px;
+  width: 976px;
+  height: 150px;
   float:right;
   cursor:pointer;}
 #img_profession{float:right;
-                 margin-top:35px;
-				 margin-right:-20px;}
+                 margin-top:25px;
+				 margin-right:-10px;}
 				 
-.activity{margin-top:20px;
-          width:100%;
-		  height:100px;
-		  border-style: solid;
-  border-width: 3px;
-  border-color: rgb(50, 50, 50);
-  background-color: rgb(253, 253, 253);
+#activity{margin-top:20px;
+          width:1236px;
+		  height:143px;
+		
+  background:url(../imgs/%E6%B4%BB%E5%8A%A8%E8%BE%93%E5%87%BA.png);
   opacity:0.8;
   position: relative;
   overflow:hidden;
-  margin-right:-7px;
+  
   float:right;
   cursor:pointer;}
-  
+#img_activity{float:right;
+              margin-top:35px;
+			  margin-right:-20px;}
+.part1,.part2,.part3{width:23%;
+       height:143px;
+	   float:left;
+	   }  
+.part1{margin-left:100px;}
+.part1 p,.part2 p,.part3 p{margin-top:20px;}
+ .btn{display:block;
+            height:20px;
+			width:100px;
+			color:#FFF;
+			background:#000;
+			text-align:center;
+			border-radius:3px;
+			float:left;
+			margin-right:20px;}
+.leave{float:left;
+       display:block;}
 #img_water {
 	
 	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
@@ -104,25 +104,47 @@ body{background:url(../imgs/%E7%BA%B9%E7%90%86.png);}
 	-webkit-transform: translate3d(0,0,0) scale(1.12);
 	transform: translate3d(0,0,0) scale(1.12);
 }
+#img_activity {
+	opacity:0.5
+	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+	transition: opacity 0.35s, transform 0.35s;
+	-webkit-transform: translate3d(-20px,0,0) scale(1);
+	transform: translate3d(-20px,0,0) scale(1);
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+}
+
+#activity:hover img {
+	opacity: 1;
+	-webkit-transform: translate3d(0,0,0) scale(1.12);
+	transform: translate3d(0,0,0) scale(1.12);
+}
 #water:hover{background-color:#CC6;}
-#water p {
-	padding: 0 10px 0 0;
-	width: 50%;
+#p_title,#p_replay {
+	
+	width: 240px;
 	border-right: 1px solid #fff;
-	text-align: right;
+	text-align: center;
 	opacity: 1;
 	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
 	transition: opacity 0.35s, transform 0.35s;
-	-webkit-transform: translate3d(-40px,0,0);
-	transform: translate3d(-40px,0,0);
+	-webkit-transform: translate3d(-10px,0,0);
+	transform: translate3d(-10px,0,0);
 }
-
-#water:hover p {
+#p_title{margin-left:20px;
+         margin-top:70px;}
+#p_replay{margin-left:20px;
+          margin-top:15px;}
+#water:hover #p_title {
 	opacity: 0;
 	-webkit-transform: translate3d(0,0,0);
 	transform: translate3d(0,0,0);
 }
-
+#water:hover #p_replay {
+	opacity: 0;
+	-webkit-transform: translate3d(0,0,0);
+	transform: translate3d(0,0,0);
+}
 #img_profession{
 	-webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
 	transition: opacity 0.35s, transform 0.35s;
@@ -181,17 +203,19 @@ body{background:url(../imgs/%E7%BA%B9%E7%90%86.png);}
 	margin: 0 auto;
 	width: 100%
 }
+#img_slider{float:right;
+            margin-top:75px;
+		 margin-right:-60px;}
+
 .slider-container {
-  margin-top:70px;
-  border-style: solid;
-  border-width: 3px;
-  border-color: rgb(50, 50, 50);
-  background-color:rgb(253, 253, 253);
+  margin-top:60px;
+ 
+  background:url(../imgs/%E7%99%BE%E7%A7%91%E6%8A%BD%E5%87%BA.png);
   opacity:0.8;
   position: relative;
   overflow:hidden;
   width: 100%;
-  height: 170px;
+  height: 200px;
   cursor:pointer;
 	
 }
@@ -208,11 +232,16 @@ body{background:url(../imgs/%E7%BA%B9%E7%90%86.png);}
 }
 .slider-container .slide {
 	float: left;
-	height: 170px;
+	height: 150px;
 	overflow: hidden;
 	position: relative;
-	width:1200px;
+	width:1235px;
 }
+.slide h2{margin-top:28px;
+         margin-left:120px;}
+.slide p{margin-top:40px;
+        }
+
 .slider-nav {
 	text-align: center;
 	width:90%;
