--- a/重构/css/common.css
+++ b/重构/css/common.css
@@ -137,7 +137,7 @@ textarea {
     border-color: #323232;
 }
 
-    .btn-primary:hover {
+    .btn-primary:hover, .btn-primary:focus {
         background-color: #464646;
         border-color: #464646;
     }
@@ -148,10 +148,14 @@ textarea {
     border-color: #323232;
 }
 
+.form-control {
+    border-radius: 0;
+}
+
 .form-control:focus {
-    border-color: #323232;
+    border: 1px solid #323232;
     outline: 0;
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 6px #323232;
+    box-shadow: none;
 }
 
 .carousel-inner > .item > h2 {
