--- a/重构/css/forum.css
+++ b/重构/css/forum.css
@@ -11,16 +11,16 @@
     overflow: hidden;
 }
 
-.section-forum  h2 {
-    margin-left: 20px;
-    margin-right: 20px;
-    padding-bottom: 10px;
-    margin-top: 20px;
-    color: #666;
-    font-size: 22px;
-    border-bottom: 3px solid #666;
-    position: absolute;
-}
+    .section-forum h2 {
+        margin-left: 20px;
+        margin-right: 20px;
+        padding-bottom: 10px;
+        margin-top: 20px;
+        color: #666;
+        font-size: 22px;
+        border-bottom: 3px solid #666;
+        position: absolute;
+    }
 
 #slide_baike > .carousel-indicators {
     bottom: -8px;
@@ -29,25 +29,25 @@
 .section-veritcle > .forum-title {
     margin: 20px;
     width: 60px;
-    float: left
+    float: left;
 }
 
-.section-veritcle > .forum-title > h2 {
-    margin: 0;
-    border-bottom: 0;
-    border-right: 3px solid #666;
-    position: relative;
-    width: 40px;
-}
+    .section-veritcle > .forum-title > h2 {
+        margin: 0;
+        border-bottom: 0;
+        border-right: 3px solid #666;
+        position: relative;
+        width: 40px;
+    }
 
-.section-veritcle > .forum-title > h2:first-child {
-    padding-top: 25px;
-}
+        .section-veritcle > .forum-title > h2:first-child {
+            padding-top: 25px;
+        }
 
-.section-veritcle > .forum-title > h2:last-child {
-    padding-top: 1px;
-    padding-bottom: 25px;
-}
+        .section-veritcle > .forum-title > h2:last-child {
+            padding-top: 1px;
+            padding-bottom: 25px;
+        }
 
 .section-forum > .row > div > h2 {
     position: relative;
@@ -64,7 +64,63 @@
     margin-left: 20px;
 }
 
-.bg-img {
-    float: right;
+.bg-img-baike {
     position: absolute;
+    margin-top: 20px;
+    margin-left: -200px;
+    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+    transition: opacity 0.35s, transform 0.35s;
+    -webkit-transform: translate3d(-20px,0,0) scale(1);
+    transform: translate3d(-20px,0,0) scale(1);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.bg-img-talk {
+    position: absolute;
+    margin-top: -100px;
+    margin-left: 150px;
+    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+    transition: opacity 0.35s, transform 0.35s;
+    -webkit-transform: translate3d(-20px,0,0) scale(1);
+    transform: translate3d(-20px,0,0) scale(1);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.section-forum:hover img {
+    opacity: 0.7;
+    -webkit-transform: translate3d(0,0,0) scale(1.12);
+    transform: translate3d(0,0,0) scale(1.12);
+}
+
+.section-forum:hover {
+    background-color: #CC6;
+}
+
+.bg-img-profession {
+    position: absolute;
+    margin-top: 30px;
+    margin-left: 650px;
+    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+    transition: opacity 0.35s, transform 0.35s;
+    -webkit-transform: translate3d(-20px,0,0) scale(1);
+    transform: translate3d(-20px,0,0) scale(1);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.bg-img-activity {
+    position: absolute;
+    margin-top: 30px;
+    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+    transition: opacity 0.35s, transform 0.35s;
+    -webkit-transform: translate3d(-20px,0,0) scale(1);
+    transform: translate3d(-20px,0,0) scale(1);
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.row {
+    overflow: hidden;
 }
