--- a/重构/css/history.css
+++ b/重构/css/history.css
@@ -1,16 +1,37 @@
 ﻿#slide_history {
     border-top: 3px solid #000;
     margin-top: 200px;
-    background-color: rgba(234,234,234,0.8);
+    background-color: rgba(160,160,160,0.8);
     height: 100%;
     width: 100%
 }
 
 #slide_history img {
     margin-left: auto;
-    margin-right: auto;
 }
 
 #slide_history > .carousel-indicators {
-    bottom: 200px
+    bottom: 160px;
+    z-index: 999;
+    width: 100%;
+    left: 0;
+    margin-left: 0;
+}
+
+#slide_history > .carousel-indicators > li {
+    border: 0;
+    width: auto;
+    height: auto;
+    margin: 0 56px;
+    border-radius: 0;
+    background: none;
+    text-indent: 0;
+}
+
+#slide_history .carousel-caption {
+    left: 100px;
+    right: 100px;
+    top: 145px;
+    font-size: 20px;
+    text-align: left;
 }
