--- a/重构/css/common.css
+++ b/重构/css/common.css
@@ -83,7 +83,7 @@ body {
 
 .bg-image > img {
     width: calc(100%);
-    height: calc(100%);
+    height: calc(60%);
 }
 
 .hide-elem {
@@ -185,4 +185,67 @@ textarea {
 
 .section .container {
     margin-top: 200px;
+}
+
+#img1 {
+    background: transparent url(../image/background/pic_index.jpg) no-repeat center;
+    background-size: cover;
+}
+
+#img2 {
+    background: transparent url(../image/background/pic_mov.jpg) no-repeat center;
+    background-size: cover;
+}
+
+#img3 {
+    background: transparent url(../image/background/pic_map.jpg) no-repeat center;
+    background-size: cover;
+}
+
+#img4 {
+    background: transparent url(../image/background/pic_pic.jpg) no-repeat center;
+    background-size: cover;
+}
+
+#img5 {
+    background: transparent url(../image/background/pic_tool.jpg) no-repeat center;
+    background-size: cover;
+}
+
+video {
+    width: 1366px;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.img-dragger-small .slide h2 {
+    margin-top: 10px;
+    text-align: left;
+    font-size: 20px;
+    line-height: 30px;
+    opacity: 0.3;
+}
+
+#sec_pic h1 {
+    font-size: 56px;
+    color: #fff;
+    letter-spacing: 20px;
+}
+
+#sec_pic p {
+    font-size: 20px;
+    color: #fff;
+    letter-spacing: 6px;
+}
+
+#sec_pic .stage {
+    margin-top: 180px;
+    background-color: rgba(255,255,255,0.3);
+    padding-top: 20px;
+    padding-left: 40px;
+    height: 240px;
+    width: 640px;
+    margin-left: 100px;
 }
